--- a/group3.ipynb
+++ b/group3.ipynb
@@ -3562,25 +3562,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of XLMRobertaForSequenceClassification were not initialized from the model checkpoint at xlm-roberta-base and are newly initialized: ['classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_ckpt = 'xlm-roberta-base'\n",
     "device = (\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "sentiment_analysis = sentiment_analysis = pipeline('sentiment-analysis', model=model_ckpt, tokenizer=model_ckpt, max_length=512, truncation=True, device=device)\n",
     "\n",
+    "start = time.perf_counter()\n",
+    "\n",
     "sentiment_results = {}\n",
     "for col in ['trans_clean_comments', 'trans_clean_description', 'trans_clean_host_about']:\n",
     "    sentiment = sentiment_analysis(grouped_train_clean[col].tolist())\n",
-    "    sentiment_results[col] = sentiment"
+    "    sentiment_results[col] = sentiment\n",
+    "    \n",
+    "print(f'Took {time.perf_counter() - start:0.2f} seconds')"
    ]
   },
   {
@@ -3627,10 +3622,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "VKdP_BWyFaSR",
-    "jupyter": {
-     "source_hidden": true
-    }
+    "id": "VKdP_BWyFaSR"
    },
    "outputs": [],
    "source": [
@@ -3642,17 +3634,6 @@
     "#     positive sentiment.\n",
     "# ... lack of accuracy of the sentiment analyser used\n",
     "# ... lack of power of the chi-square test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "3lKeRVfxFaSR"
-   },
-   "outputs": [],
-   "source": [
-    "# ... do this for the other 2 fields?"
    ]
   },
   {
@@ -3746,7 +3727,159 @@
     "id": "Dry9kOCZaxuD"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Define necessary functions\n",
+    "def tokenize_corpus(corpus):\n",
+    "    tokens = [x.split() for x in corpus]\n",
+    "    return tokens\n",
+    "\n",
+    "def build_training(tokenized_corpus, word2idx, window_size=2):\n",
+    "    idx_pairs = []\n",
+    "    \n",
+    "    for sentence in tokenized_corpus:\n",
+    "        indices = [word2idx[word] for word in sentence]\n",
+    "        for center_word_pos in range(len(indices)):\n",
+    "            for w in range(-window_size, window_size + 1):\n",
+    "                context_word_pos = center_word_pos + w\n",
+    "                if  context_word_pos < 0 or \\\n",
+    "                    context_word_pos >= len(indices) or \\\n",
+    "                    center_word_pos == context_word_pos:\n",
+    "                    continue  \n",
+    "                context_word_idx = indices[context_word_pos]\n",
+    "                idx_pairs.append((indices[center_word_pos], context_word_idx))\n",
+    "    \n",
+    "    return np.array(idx_pairs)\n",
+    "\n",
+    "def get_onehot_vector(word_idx, vocabulary):\n",
+    "    x = torch.zeros(len(vocabulary)).float()\n",
+    "    x[word_idx] = 1.0\n",
+    "    return x\n",
+    "\n",
+    "def Skip_Gram(training_pairs, vocabulary, embedding_dims=5, learning_rate=0.001, epochs=10):\n",
+    "    \n",
+    "    torch.manual_seed(3)\n",
+    "    \n",
+    "    W1 = torch.randn(embedding_dims, len(vocabulary), requires_grad=True).float()\n",
+    "    W2 = torch.randn(len(vocabulary), embedding_dims, requires_grad=True).float()\n",
+    "    \n",
+    "    losses = []\n",
+    "    \n",
+    "    for epo in tqdm(range(epochs)):\n",
+    "        loss_val = 0\n",
+    "        \n",
+    "        for input_word, target in training_pairs:\n",
+    "            x = get_onehot_vector(input_word, vocabulary).float()\n",
+    "            y_true = torch.from_numpy(np.array([target])).long()\n",
+    "\n",
+    "            z1 = torch.matmul(W1, x)\n",
+    "            z2 = torch.matmul(W2, z1)\n",
+    "            log_softmax = F.log_softmax(z2, dim=0)\n",
+    "            loss = F.nll_loss(log_softmax.view(1,-1), y_true)\n",
+    "            loss_val += loss.item()\n",
+    "            loss.backward()\n",
+    "            \n",
+    "            with torch.no_grad():\n",
+    "                W1 -= learning_rate * W1.grad\n",
+    "                W2 -= learning_rate * W2.grad\n",
+    "                W1.grad.zero_() \n",
+    "                W2.grad.zero_()\n",
+    "        \n",
+    "        losses.append(loss_val/len(training_pairs))\n",
+    "    \n",
+    "    return W1, W2, losses\n",
+    "\n",
+    "def get_document_embedding(doc, word2idx, W1):\n",
+    "    indices = [word2idx[word] for word in doc if word in word2idx]\n",
+    "    if len(indices) == 0:\n",
+    "        return np.zeros(W1.shape[0])\n",
+    "    embeddings = W1[:, indices]\n",
+    "    doc_embedding = embeddings.mean(dim=1).detach().numpy()\n",
+    "    return doc_embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Podemos fazer o train split test no inicio ou apenas no fim de obter os vetores das features, eu optei por fazer no inicio mas acredito que o codigo fique mais percetivel fazendo apenas quando se obtiverem os vetores.\n",
+    "#Sei que já deves ter funcoes para alguns destes casos, no entanto meti aqui as das aulas( estão acima).\n",
+    "#No meu codigo o X_train,X_val corespondia já a feature \"lemma_no_stopwords_ner_trans_clean_comments\"\n",
+    "tokenized_corpus_X_train = tokenize_corpus(X_train)\n",
+    "tokenized_corpus_X_val = tokenize_corpus(X_val)\n",
+    "tokenized_corpus_X_test = tokenize_corpus(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_X_train = set(word for sentence in tokenized_corpus_X_train for word in sentence)\n",
+    "word2idx_X_train = {word: idx for idx, word in enumerate(words_X_train)}\n",
+    "\n",
+    "words_X_val = set(word for sentence in tokenized_corpus_X_val for word in sentence)\n",
+    "word2idx_X_val = {word: idx for idx, word in enumerate(words_X_val)}\n",
+    "\n",
+    "words_X_test = set(word for sentence in tokenized_corpus_X_test for word in sentence)\n",
+    "word2idx_X_test = {word: idx for idx, word in enumerate(words_X_test)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_pairs_X_train = build_training(tokenized_corpus_X_train, word2idx_X_train, window_size=2)\n",
+    "training_pairs_X_val = build_training(tokenized_corpus_X_val, word2idx_X_val, window_size=2)\n",
+    "training_pairs_X_test = build_training(tokenized_corpus_X_test, word2idx_X_test, window_size=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the skip-gram model\n",
+    "embedding_dims = 2\n",
+    "learning_rate = 0.001\n",
+    "epochs = 3\n",
+    "#meti  epocs baixos assim como as embeddings para ver se corria mais facilmente\n",
+    "W1_X_train, W2_X_train, losses_X_train = Skip_Gram(training_pairs, word2idx_X_train, embedding_dims, learning_rate, epochs)\n",
+    "W1_X_val, W2_X_val, losses_X_val = Skip_Gram(training_pairs, word2idx_X_val, embedding_dims, learning_rate, epochs)\n",
+    "W1_X_test, W2_X_test, losses_X_test = Skip_Gram(training_pairs, word2idx_X_test, embedding_dims, learning_rate, epochs)\n",
+    "#esta é a parte que demora muito, o resto corre rapidadamente, ainda nao testei para baixo disto pois o computador não consegue terminar de correr mesmo eu utilizando o X_train apenas. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_vectors_X_train = [get_document_embedding(doc, word2idx_X_train, W1_X_train) for doc in tokenized_corpus_X_train]\n",
+    "feature_vectors_X_val = [get_document_embedding(doc, word2idx_X_val, W1_X_val) for doc in tokenized_corpus_X_val]\n",
+    "feature_vectors_X_test = [get_document_embedding(doc, word2idx_X_test, W1_X_test) for doc in tokenized_corpus_X_test]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = torch.tensor(feature_vectors_X_train, dtype=torch.float32)\n",
+    "X_val = torch.tensor(feature_vectors_X_val, dtype=torch.float32)\n",
+    "X_test = torch.tensor(feature_vectors_X_test, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)\n",
+    "y_val = torch.tensor(y_val, dtype=torch.float32).view(-1, 1)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.float32).view(-1, 1)\n",
+    "# depois é apenas treinar o modelo"
+   ]
   },
   {
    "cell_type": "markdown",
