--- a/group3.ipynb
+++ b/group3.ipynb
@@ -5243,7 +5243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 60,
    "metadata": {
     "id": "DRI2l3SuZKJe"
    },
@@ -5307,7 +5307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 61,
    "metadata": {
     "id": "gRYM4_pvzUf8"
    },
@@ -5426,116 +5426,21 @@
     "id": "rvTvwgtp07uH",
     "outputId": "bdc8564c-58b7-4598-defe-c20234ecd422"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tokenizing...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62a1c377c14f4e33b62d505a2ed0fea8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/4998 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "808dca5c04634684905ccabf6e675d65",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/625 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65882ca6b1714e529d358c244da92db1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/625 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting hidden states...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b53b75e29dd0485c8faaa1334de4a320",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/4998 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a90f38649ece4ae4a79fb561461bd4ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/625 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c7f09d653b24cb99423b657ee8e0e7e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/625 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xlmr_datasets = {}\n",
     "\n",
     "# dataset 1:\n",
-    "columns = 'ner_trans_clean_comments'\n",
+    "data_kwargs = {\n",
+    "    'columns': 'ner_trans_clean_comments',\n",
+    "    'group': True,\n",
+    "    'train_path': TRAIN_PREPROCESSED_PATH,\n",
+    "    'test_path': TEST_PREPROCESSED_PATH,\n",
+    "    'split_proportions': (.8, .1, .1)\n",
+    "}\n",
     "model_ckpt = 'xlm-roberta-base'\n",
     "\n",
-    "X_train_xlmr, X_val_xlmr, X_test_xlmr, y_train_xlmr, y_val_xlmr, y_test_xlmr = create_feature_extraction_datasets(columns, model_ckpt,\n",
-    "                                                                                                                  train_path=TRAIN_PREPROCESSED_PATH_DRIVE,\n",
-    "                                                                                                                  test_path=TEST_PREPROCESSED_PATH_DRIVE)\n",
+    "X_train_xlmr, X_val_xlmr, X_test_xlmr, y_train_xlmr, y_val_xlmr, y_test_xlmr = create_feature_extraction_datasets(data_kwargs, model_ckpt)\n",
     "xlmr_datasets['xlmr'] = {\n",
     "    'X_train': X_train_xlmr,\n",
     "    'X_val': X_val_xlmr,\n",
